--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Store</a>
+                <a class="nav-link" href="cart.html">Cart</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Account</a>
+                <a class="nav-link" href="#">Wish List</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="signup.html">Account</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link">Contact Us</a>
@@ -33,7 +36,7 @@
           </div>
         </div>
       </nav>
-      <h1 class="text-center">Electronics</h1>
+      <h1 class="text-center">Featured</h1>
       <div class="row justify-content-center">
       <div class="card" style="width:20rem">
         <img src="thums/0.webp" onerror="this.src='default-img.png';" class="card-img-top" alt="">
@@ -42,7 +45,7 @@
           <p class="card-text">LED Strip Light RGB 2835 Bluetooth Control USB Flexible Light 5V Ribbon Diode for Holiday Room</p>
           <a href="#" class="btn btn-primary">Add to cart</a>
         </div>
-      </div><div class="card" style="width:20rem">
+      </div><div class="card mx-2" style="width:20rem">
         <img src="thums/1.webp" onerror="this.src='default-img.png';" class="card-img-top" alt="">
         <div class="card-body">
           <h5 class="card-title" style="color: red;">16.76€</h5>
@@ -57,6 +60,53 @@
           <p class="card-text">Lenovo LP40 Pro Earphone Bluetooth 5.1 Wireless Headphones Waterproof Earpieces Sports Earbuds Wiht Microphone Music TWS Headset</p>
           <a href="#" class="btn btn-primary">Add to cart</a>
         </div>
+      </div>
+    </div>
+    <h1 class="text-center">Limited deals</h1>
+    <div style="background-color: rgba(74, 255, 74, 0.486); padding-top: 1%; padding-bottom: 1%;"
+      class="row justify-content-center">
+      <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="card mx-auto" style="width:20rem">
+              <img src="thums/3.webp" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+              <div class="card-body">
+                <h5 class="card-title" style="color: red;"><s>0.69€</s> 0.29€</h5>
+                <p class="card-text">Multifunctional Double Sided Adhesive Tape Waterproof Reusable Wall Stickers Transparent Strong Sticky Glue Car Bathroom Kitchen
+                <a href="#" class="btn btn-primary">Add to cart</a>
+              </div>
+            </div>
+            
+          </div>
+          <div class="carousel-item">
+            <div class="card mx-auto" style="width:20rem">
+              <img src="thums/4.webp" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+              <div class="card-body">
+                <h5 class="card-title" style="color: red;"><s>2.99€</s> 1.99€</h5>
+                <p class="card-text">XP-G Q5 Zoom Focus Mini Led Flashlight Torch Lamp Lantern 2000Lumen Adjustable Penlight Waterproof T6 Led Light
+                <a href="#" class="btn btn-primary">Add to cart</a>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="card mx-auto" style="width:20rem">
+              <img src="thums/5.webp" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+              <div class="card-body">
+                <h5 class="card-title" style="color: red;"><s>26.99€</s> 24.99€</h5>
+                <p class="card-text">WALRAM M.2 SSD 512GB</p>
+                <a href="#" class="btn btn-primary">Add to cart</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
