--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
+  <div id="bg"></div>
     <nav class="navbar navbar-expand-lg bg-body-tertiary w-40 bg-dark mx-auto" data-bs-theme="dark" style="float:none;">
         <div class="container-fluid">
           <a class="navbar-brand position-absolute" href="#">E-Express</a>
@@ -21,10 +22,13 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Store</a>
+                <a class="nav-link" href="cart.html">Cart</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Account</a>
+                <a class="nav-link" href="#">Wish List</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="signup.html">Account</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link">Contact Us</a>
@@ -33,7 +37,7 @@
           </div>
         </div>
       </nav>
-      <h1 class="text-center">Electronics</h1>
+      <h1 class="text-center">Featured</h1>
       <div class="row justify-content-center">
       <div class="card" style="width:20rem">
         <img src="thums/0.webp" onerror="this.src='default-img.png';" class="card-img-top" alt="">
@@ -42,7 +46,7 @@
           <p class="card-text">LED Strip Light RGB 2835 Bluetooth Control USB Flexible Light 5V Ribbon Diode for Holiday Room</p>
           <a href="#" class="btn btn-primary">Add to cart</a>
         </div>
-      </div><div class="card" style="width:20rem">
+      </div><div class="card mx-2" style="width:20rem">
         <img src="thums/1.webp" onerror="this.src='default-img.png';" class="card-img-top" alt="">
         <div class="card-body">
           <h5 class="card-title" style="color: red;">16.76€</h5>
@@ -56,6 +60,175 @@
           <h5 class="card-title" style="color: red;">6.88€</h5>
           <p class="card-text">Lenovo LP40 Pro Earphone Bluetooth 5.1 Wireless Headphones Waterproof Earpieces Sports Earbuds Wiht Microphone Music TWS Headset</p>
           <a href="#" class="btn btn-primary">Add to cart</a>
+        </div>
+      </div>
+    </div>
+    <h1 class="text-center">Limited deals</h1>
+    <div style="background-color: rgba(74, 255, 74, 0.486); padding-top: 1%; padding-bottom: 1%;"
+      class="row justify-content-center">
+      <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="mx-auto" style="width: fit-content;">
+            <div class="card d-inline-block" style="width:20rem">
+              <img src="thums/3.webp" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+              <div class="card-body">
+                <h5 class="card-title" style="color: red;"><s>0.69€</s> 0.29€</h5>
+                <p class="card-text">Multifunctional Double Sided Adhesive Tape Waterproof Reusable Wall Stickers Transparent Strong Sticky Glue Car Bathroom Kitchen
+                <a href="#" class="btn btn-primary">Add to cart</a>
+              </div>
+            </div>
+            <div class="card d-inline-block" style="width:20rem">
+              <img src="https://ae04.alicdn.com/kf/H3bc8d62679dd4bf69351d80021b29d2cv.jpg_.webp" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+              <div class="card-body">
+                <h5 class="card-title" style="color: red;"><s>11.55€</s> 5.32€</h5>
+                <p class="card-text">Sandisk Ultra Micro SD 128GB<br><br><br>
+                <a href="#" class="btn btn-primary">Add to cart</a>
+              </div>
+            </div>
+            <div class="card d-inline-block" style="width:20rem">
+              <img src="https://ae04.alicdn.com/kf/Hf7f4d5602f704cf7986eaffdc127e3cat.jpg_.webp" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+              <div class="card-body">
+                <h5 class="card-title" style="color: red;"><s>49.22€</s> 9.46€</h5>
+                <p class="card-text">NEW Original Lenovo LP40 TWS Wireless Earphone Bluetooth<br><br>
+                <a href="#" class="btn btn-primary">Add to cart</a>
+              </div>
+            </div></div>
+            
+          </div>
+          <div class="carousel-item">
+            <div class="mx-auto" style="width: fit-content;">
+            <div class="card d-inline-block" style="width:20rem">
+              <img src="thums/4.webp" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+              <div class="card-body">
+                <h5 class="card-title" style="color: red;"><s>2.99€</s> 1.99€</h5>
+                <p class="card-text">XP-G Q5 Zoom Focus Mini Led Flashlight Torch Lamp Lantern 2000Lumen Adjustable Penlight Waterproof T6 Led Light
+                <a href="#" class="btn btn-primary">Add to cart</a>
+              </div></div>
+              <div class="card d-inline-block" style="width:20rem">
+                <img src="https://ae04.alicdn.com/kf/S84968f67af4f44fda760fbffb3964778T.jpg_.webp" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+                <div class="card-body">
+                  <h5 class="card-title" style="color: red;"><s>165.82€</s> 26.98€</h5>
+                  <p class="card-text">2022 Smart Watch Women Series 8 2.0 "<br><br><br>
+                  <a href="#" class="btn btn-primary">Add to cart</a>
+                </div></div>
+                <div class="card d-inline-block" style="width:20rem">
+                  <img src="https://ae04.alicdn.com/kf/H030ceaf6a50d4f2a98ee46ef57f57a20W.jpg_.webp" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+                  <div class="card-body">
+                    <h5 class="card-title" style="color: red;"><s>69.99€</s> 42.26€</h5>
+                    <p class="card-text">REDRAGON Fizz K617 RGB USB Mini Mechanical Gaming<br><br>
+                    <a href="#" class="btn btn-primary">Add to cart</a>
+                  </div></div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="mx-auto" style="width: fit-content;">
+            <div class="card d-inline-block" style="width:20rem">
+              <img src="thums/5.webp" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+              <div class="card-body">
+                <h5 class="card-title" style="color: red;"><s>26.99€</s> 24.99€</h5>
+                <p class="card-text">WALRAM M.2 SSD 512GB<br><br></p>
+                <a href="#" class="btn btn-primary">Add to cart</a>
+              </div></div>
+              <div class="card d-inline-block" style="width:20rem">
+                <img src="https://ae04.alicdn.com/kf/Udf7c7878ae144316ae35f80dd53ad22ej.jpg_.webp" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+                <div class="card-body">
+                  <h5 class="card-title" style="color: red;"><s>110.00€</s> 60.94€</h5>
+                  <p class="card-text">Asgard Loki w2 RGB RAM 8GBx2 16gb 32gb 3200MHz<br><br>
+                  <a href="#" class="btn btn-primary">Add to cart</a>
+                </div></div>
+                <div class="card d-inline-block" style="width:20rem">
+                  <img src="https://ae04.alicdn.com/kf/Sfaefb7f4302748ddb5604bef7e9b6c85O.jpg_.webp" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+                  <div class="card-body">
+                    <h5 class="card-title" style="color: red;"><s>55.15€</s> 22.99€</h5>
+                    <p class="card-text">Original Lenovo th30 wireless headphones Bluetooth<br><br>
+                    <a href="#" class="btn btn-primary">Add to cart</a>
+                  </div></div>
+            </div>
+          </div>
+        </div>
+        
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+    <div class="card" style="width: 100%; ">
+      <div class="card-body justify-content-center d-flex">
+        <div class="d-block">
+        <p class="card-text fs-1">use this code to get 20% off<br> when buying PC components</p>
+        <h1 class="text-center"><b>PC20OFF</b></h1></div>
+        <img style="aspect-ratio: 2/1; width: 20%;" src="https://www.zaproo.com/uploads/en/cbe5a5ae67624bca8bf0392d8b1b167e.png" alt="">
+      </div>
+    </div>
+    <h1 class="text-center">Categories</h1>
+    <div class="row justify-content-center">
+      <div class="card" style="width:15rem">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fc.shld.net%2Frpx%2Fi%2Fs%2Fi%2Fspin%2F10130172%2Fprod_18899955412%3F%3Fhei%3D64%26wid%3D64%26qlt%3D50&f=1&nofb=1&ipt=67bf42d924b10194a2645c28d53808c62b0803c70af58251e24d9fd14d929676&ipo=images" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+        <div class="card-body">
+          <p class="card-text">Computers</p>
+          <a href="#" class="btn btn-primary">Explore</a>
+        </div>
+      </div>
+      <div class="card" style="width:15rem">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.kustompcs.co.uk%2Fimages%2Fdetailed%2F29%2FIMG_20190903_135803_resized.jpg&f=1&nofb=1&ipt=36a37375e5b263c467b77d5bebd6b5df0def44fd39271e12e0bccfb1d9bc69ba&ipo=images" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+        <div class="card-body">
+          <p class="card-text">Laptops</p>
+          <a href="#" class="btn btn-primary">Explore</a>
+        </div>
+      </div>
+      <div class="card" style="width:15rem">
+        <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fcdn.shopify.com%2Fs%2Ffiles%2F1%2F2092%2F4879%2Fproducts%2F551_D_1024x1024.jpg%3Fv%3D1548444315&f=1&nofb=1&ipt=7eb66d0012b577c2817dc69c127c1e55605fc2204ee33471449928725b8a1995&ipo=images" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+        <div class="card-body">
+          <p class="card-text">Mouses</p>
+          <a href="#" class="btn btn-primary">Explore</a>
+        </div>
+      </div>
+      <div class="card" style="width:15rem">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.-4uMMDC32VD_jxfOubqDEwHaHa%26pid%3DApi&f=1&ipt=24c9a2a145cc4b9e4216b747623d422b0a77476018b322692ecbd4200e9e3168&ipo=images" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+        <div class="card-body">
+          <p class="card-text">Keyboards</p>
+          <a href="#" class="btn btn-primary">Explore</a>
+        </div>
+      </div>
+      <div class="card" style="width:15rem">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.65kwByk1mAmrLwUSKWIE_gHaHa%26pid%3DApi&f=1&ipt=86230e9b9ac742f53d91cad5ef43fa1e34cb19a3d73d30e3da94324cc8ccb43f&ipo=images" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+        <div class="card-body">
+          <p class="card-text">PC Case</p>
+          <a href="#" class="btn btn-primary">Explore</a>
+        </div>
+      </div>
+      <div class="card" style="width:15rem">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcontent.etilize.com%2F1500%2F1030241332.jpg&f=1&nofb=1&ipt=9691fcc41303e5a2c1ca610aa93f8c58fdb7870a8adcd76e9be1077b53158f2d&ipo=images" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+        <div class="card-body">
+          <p class="card-text">Ram Sticks</p>
+          <a href="#" class="btn btn-primary">Explore</a>
+        </div>
+      </div>
+      <div class="card" style="width:15rem">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.bhphotovideo.com%2Fimages%2Fimages2500x2500%2Fmsi_g4090sx24_geforce_rtx_4090_suprim_1729349.jpg&f=1&nofb=1&ipt=fd19b2b383f4a1389b9ae454d17613d139c96fcac17ba5255583215a92f33593&ipo=images" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+        <div class="card-body">
+          <p class="card-text">GPUs</p>
+          <a href="#" class="btn btn-primary">Explore</a>
+        </div>
+      </div>
+      <div class="card" style="width:15rem">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.OAwPQI-6SQuHLjkpZQrXNwHaHa%26pid%3DApi&f=1&ipt=7fcefdcebf3cc065cefd25f0c670e9b3caaf66894e3fc1222f42de3ce1519416&ipo=images" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+        <div class="card-body">
+          <p class="card-text">CPUs</p>
+          <a href="#" class="btn btn-primary">Explore</a>
+        </div>
+      </div>
+      <div class="card" style="width:15rem">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.ZRIiGQ-lkOAskCbJkLINjwHaHa%26pid%3DApi&f=1&ipt=5359367f055d90ded383e066c2ba629da0d2ce8cbfe9e352d1b05e609084a3ec&ipo=images" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+        <div class="card-body">
+          <p class="card-text">Android Phones</p>
+          <a href="#" class="btn btn-primary">Explore</a>
         </div>
       </div>
     </div>
