--- a/index.html
+++ b/index.html
@@ -231,6 +231,55 @@
           <a href="#" class="btn btn-primary">Explore</a>
         </div>
       </div>
+      <div class="card" style="width:15rem">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.shopify.com%2Fs%2Ffiles%2F1%2F1662%2F8203%2Fproducts%2F3_5528919c-82ec-4596-a644-36da10cfc14f_1024x1024.jpg%3Fv%3D1551817975&f=1&nofb=1&ipt=d4c29e6b72373c65ae564bd2b5175a500705ee8ad8fe15c95482c0d964d4a6ce&ipo=images" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+        <div class="card-body">
+          <p class="card-text">iPhones</p>
+          <a href="#" class="btn btn-primary">Explore</a>
+        </div>
+      </div>
+      <div class="card" style="width:15rem">
+        <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fvuquyen.vn%2Fuploads%2Fshops%2F2017_03%2Fdjw8liq7_dhupfqtw.png&f=1&nofb=1&ipt=3e7920768f56f83d3ffaf8918249b0b10b0205da14d9622917737c5c962abe9f&ipo=images" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+        <div class="card-body">
+          <p class="card-text">Hard Disks</p>
+          <a href="#" class="btn btn-primary">Explore</a>
+        </div>
+      </div>
+      <div class="card" style="width:15rem">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.FwUuJ9BqWf5iUwv9qhHIOAHaHa%26pid%3DApi&f=1&ipt=625a349ee1d5c1cdb7b1a8f787aa1a25e65e001bf02654158367ba5778d98c2b&ipo=images" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+        <div class="card-body">
+          <p class="card-text">SSD's</p>
+          <a href="#" class="btn btn-primary">Explore</a>
+        </div>
+      </div>
+      <div class="card" style="width:15rem">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F2.bp.blogspot.com%2F-3TaSM_sRhj0%2FUhy27wfsFMI%2FAAAAAAAAAO4%2F3cPYnYajJHU%2Fs1600%2FGigabyte-Z68MX-UD2H-Micro-ATX-Intel-Z68-Motherboard-Gets-Pictured-2.jpg&f=1&nofb=1&ipt=630bee7d1b102c855c7511db87436f188f0f7e9b8e4ac9ee7f0c8d8f99a9628c&ipo=images" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+        <div class="card-body">
+          <p class="card-text">Motherboards</p>
+          <a href="#" class="btn btn-primary">Explore</a>
+        </div>
+      </div>
+      <div class="card" style="width:15rem">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.actiekabel.nl%2Fwp-content%2Fuploads%2F2016%2F02%2F193375-micro-sd-32gb-1.png&f=1&nofb=1&ipt=0ada2ad04e698333fbb0533b072317a30824db20d2f2be20f8e65f18053db89e&ipo=imagess" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+        <div class="card-body">
+          <p class="card-text">MicroSD</p>
+          <a href="#" class="btn btn-primary">Explore</a>
+        </div>
+      </div>
+      <div class="card" style="width:15rem">
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fstatic.netshoes.com.br%2Fprodutos%2Frelogio-smartwatch-a1%2F38%2FQWT-0576-138%2FQWT-0576-138_zoom1.jpg%3Fts%3D1599856206%26&f=1&nofb=1&ipt=130b8775c8112b468faebe61ae11e2fca806f86e2d9ccda65b113899a7bb6894&ipo=images" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+        <div class="card-body">
+          <p class="card-text">SmartWatches</p>
+          <a href="#" class="btn btn-primary">Explore</a>
+        </div>
+      </div>
+      <div class="card" style="width:15rem">
+        <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fthewizzcomputers.com%2Fwp-content%2Fuploads%2F2019%2F04%2FPIC1-4.jpg&f=1&nofb=1&ipt=7a2082a7dd8f92202a7c735e6217e434429df9a7a38b42e9471c175b1f3a16d3&ipo=images" onerror="this.src='default-img.png';" class="card-img-top" alt="">
+        <div class="card-body">
+          <p class="card-text">Monitors</p>
+          <a href="#" class="btn btn-primary">Explore</a>
+        </div>
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
